Adds prototype markdown stuff

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,2 +1,18 @@
-<h1>Page#home</h1>
-<p>Find me in app/views/page/home.html.erb</p>
+<% provide(:content, raw(BlueCloth.new(File.read('public/test.md')).to_html)) %>
+<div id='contentwr'>
+  <div id='content'>
+    <div class='leftdiv'>
+      <div id='postit'>
+        <div id='posttext'>Application is now closed!</div>
+      </div>
+    </div>
+    <div class='rightdiv'>
+  
+      <%= yield :content %>
+    </div>
+  
+  </div>
+  <div class='footer'>
+    pics here!
+  </div>
+</div>
