--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -39,6 +39,7 @@ div.headertext
 min-width:100%;
 text-align:center;
 font:900 14px/22px "Arial", Helvetica, sans-serif;
+height: 100%;
 }
 
 div#a
@@ -55,6 +56,7 @@ font-size: 24px;
 
 #headerbar{
 overflow:hidden;
+height: 40px;
 }
 
 ul#headermenu
@@ -78,6 +80,7 @@ float:left;
 display:inline;
 margin:0 0;
 min-width:16.66%;
+height: 100%;
 }
 
 ul li.button a
@@ -157,7 +160,7 @@ z-index:1;
 
 div#postit{
 z-index:3;
-margin: -15px 0 0 10px;
+margin: -50px 0 0 10px;
 padding:119px 65px 0 62px;
 background: url('postit.png');
 background-repeat:no-repeat;
