Embeds fonts for the header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
             <div class='headertext' id='b'>Internship</div>
             
           </div>-->
-          <canvas id='canvas' width='600' height='95'></canvas>
+          <canvas id='canvas' class='headerlogo' width='600' height='95'></canvas>
         </div>
         <div id='headerbar'>
         
