Creates User and Content scaffolds

--- a/app/assets/stylesheets/page.scss.erb
+++ b/app/assets/stylesheets/page.scss.erb
@@ -53,6 +53,7 @@ padding-bottom:100px;
 
 div#content{
 z-index:1;
+padding: 20px 10px 5px 10px;
 }
 
 div#postit{
@@ -93,7 +94,11 @@ div.rightdiv{
 min-height:347px;
 }
 
-div.footer{
+div#footer{
+  text-align: center;
 
+}
 
+div#imageblock{
+  display: inline-block;
 }
