Adds rudimentary database n stuff

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,3 +1,5 @@
+<% post = load_post(@current) %>
+
 <div class='leftdiv'>
   <div id='postit'>
     <div id='posttext'>Application is now closed!</div>
@@ -5,5 +7,5 @@
 </div>
 <div class='rightdiv'>
 
-  Hello world!
+  <%= post %>
 </div>
