Changes various CSS..

--- a/app/assets/stylesheets/header.scss.erb
+++ b/app/assets/stylesheets/header.scss.erb
@@ -85,7 +85,7 @@ ul li.button a
 {
 text-decoration:none;
 float:left;
-color: #999;
+color: rgb(105, 28, 28);
 cursor:pointer;
 font:900 14px/22px "Arial", Helvetica, sans-serif;
 margin: 0 0 0 0;
@@ -93,7 +93,8 @@ min-width:100%;
 text-align:center;
 max-height:30px;
 padding-top:10px;
-background:url('gradtest.png');
+//background:url('gradtest.png');
+background-color: rgb(255,61,61);
 height:100%;
 position:relative;
 }
