--- a/app/assets/stylesheets/page2.scss.erb
+++ b/app/assets/stylesheets/page2.scss.erb
@@ -16,11 +16,6 @@ background:black;
 margin:0px;
 }
 
-p
-{
-color:red;
-padding-left:5px;
-}
 
 h1.center
 {
@@ -101,4 +96,8 @@ div#footer{
 
 div#imageblock{
   display: inline-block;
+}
+
+div#imageblock img{
+max-width:32%;
 }
