--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -3,10 +3,10 @@
 
 <div class='leftdiv'>
   <div id='postit'>
-    <div id='posttext'><%= postit %></div>
+    <div id='posttext'><%= raw postit %></div>
   </div>
 </div>
 <div class='rightdiv'>
 
-  <%= post %>
+  <%= raw post %>
 </div>
