--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -5,8 +5,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NapiWeb</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <title><%= @current %> - napi</title>
+  <%= stylesheet_link_tag    "page2", "header", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
