--- a/app/views/contents/_form.html.erb
+++ b/app/views/contents/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :post %><br />
-    <%= f.text_field :post %>
+    <%= f.text_area :post %>
   </div>
   <div class="actions">
     <%= f.submit %>
