--- a/app/assets/stylesheets/page2.scss.erb
+++ b/app/assets/stylesheets/page2.scss.erb
@@ -14,6 +14,7 @@ body
 {
 background:black;
 margin:0px;
+font-family: verdana, arial, helvetica, sans-serif;
 }
 
 
@@ -67,22 +68,24 @@ div#postit{
 div#posttext{
 
 /* Safari */
--webkit-transform: rotate(-10deg);
+-webkit-transform: rotate(-7deg);
 
 /* Firefox */
--moz-transform: rotate(-10deg);
+-moz-transform: rotate(-7deg);
 
 /* IE */
--ms-transform: rotate(-10deg);
+-ms-transform: rotate(-7deg);
 
 /* Opera */
--o-transform: rotate(-10deg);
+-o-transform: rotate(-7deg);
 
 width: 50%;
+line-height: 150%;
 }
 
 div.leftdiv{
 float:left;
+width: 350px;
 }
 
 div.rightdiv{
