--- a/app/assets/stylesheets/page2.scss.erb
+++ b/app/assets/stylesheets/page2.scss.erb
@@ -17,11 +17,66 @@ margin:0px;
 font-family: verdana, arial, helvetica, sans-serif;
 }
 
+table {
+  border-collapse: collapse;
+  margin: 10px auto 10px auto;
+  font-weight: bold;
+}
+
+td {
+  background-color: rgb(235,135,135);
+  color: white;
+  padding: 3px;
+  min-width: 300px;
+}
+
+table th {
+  border: 3px solid rgb(255,200,200);
+}
+
+th {
+  background-color: rgb(231,153,153);
+  color: white;
+  font-size: 20px;
+  padding: 5px;
+  text-transform: uppercase;
+}
+
+td:first-child{
+  text-align: left;
+}
+
+td:last-child{
+  text-align: right;
+}
 
 h1.center
 {
 text-align:center;
 }
+
+h2 a {
+  color: rgb(111,16,16);
+  &:visited {
+    color: rgb(194,99,99);
+  }
+  &:hover {
+    color: #fff;
+    background-color: #322;
+  }
+}
+
+li a {
+  color: rgb(111,16,16);
+  &:visited {
+    color: rgb(194,99,99);
+  }
+  &:hover {
+    color: #fff;
+    background-color: #322;
+  }
+}
+
 
 div#contentwr{
 background-image: linear-gradient(bottom, rgb(255,255,255) 74%, rgb(0,0,0) 0%, rgb(214,214,214) 21%);
@@ -44,6 +99,9 @@ height:auto;
 margin-top:-40px;
 padding-top:40px;
 padding-bottom:100px;
+
+-moz-border-radius-topleft: 15px;
+border-top-left-radius: 15px;
 }
 
 
