--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,4 +1,5 @@
 body {
+  background-color: black;
   color: rgb(200,200,200);
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
