--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -12,7 +12,7 @@
 <% @contents.each do |content| %>
   <tr>
     <td><%= content.title %></td>
-    <td><%= content.post %></td>
+    <td><%= post_limit content.post %></td>
     <td><%= link_to 'Show', content %></td>
     <td><%= link_to 'Edit', edit_content_path(content) %></td>
     <td><%= link_to 'Destroy', content, method: :delete, data: { confirm: 'Are you sure?' } %></td>
