--- a/app/assets/stylesheets/page2.scss.erb
+++ b/app/assets/stylesheets/page2.scss.erb
@@ -77,6 +77,16 @@ li a {
   }
 }
 
+a {
+  color: rgb(111,16,16);
+  &:visited {
+    color: rgb(194,99,99);
+  }
+  &:hover {
+    color: #fff;
+    background-color: #322;
+  }
+}
 
 div#contentwr{
 background-image: linear-gradient(bottom, rgb(255,255,255) 74%, rgb(0,0,0) 0%, rgb(214,214,214) 21%);
