Fixes hover bug and faq missing page

--- a/app/assets/stylesheets/header.scss.erb
+++ b/app/assets/stylesheets/header.scss.erb
@@ -121,22 +121,22 @@ ul#headermenu li.button:hover, ul#headermenu li.button:hover a{
   z-index:6;
 }
 
-li ul {
+li.button ul {
     display: none;
     list-style: none;
 }
 
-li:hover ul {
+li.button:hover ul {
     display: block;
     position: absolute;
     z-index: 5;
 }
-li:hover li {
+li.button:hover li {
     float: none;
     margin-left: -45px;
 }
 
-li:hover li a {
+li.button:hover li a {
   padding: 10px;
   text-align: left;
 }
