--- a/app/assets/stylesheets/header.scss.erb
+++ b/app/assets/stylesheets/header.scss.erb
@@ -79,6 +79,8 @@ min-width: <%= 100/7.0  %>%;
 height: 100%;
 }
 
+
+
 ul li.button a
 {
 text-decoration:none;
@@ -95,6 +97,12 @@ background-color: rgb(255,61,61);
 height:100%;
 display: block;
 white-space: nowrap;
+}
+
+ul li.button:hover a
+{
+position:relative;
+z-index:5;
 }
 
 ul li.button:first-child a
