--- a/app/assets/stylesheets/page2.scss.erb
+++ b/app/assets/stylesheets/page2.scss.erb
@@ -30,12 +30,12 @@ td {
   min-width: 300px;
 }
 
-table th {
-  border: 3px solid rgb(255,200,200);
+table, th {
+  border: 3px solid rgb(89,36,94);
 }
 
 th {
-  background-color: rgb(231,153,153);
+  background-color: rgb(196,0,0);
   color: white;
   font-size: 20px;
   padding: 5px;
