CSS table tweak

--- a/app/assets/stylesheets/page2.scss.erb
+++ b/app/assets/stylesheets/page2.scss.erb
@@ -28,11 +28,12 @@ td {
   color: white;
   padding: 3px;
   min-width: 300px;
+  border-bottom: 1px solid white;
 }
 
-table, th {
-  border: 3px solid rgb(89,36,94);
-}
+//table, th {
+//  border: 3px solid rgb(89,36,94);
+//}
 
 th {
   background-color: rgb(196,0,0);
