--- a/app/assets/stylesheets/page2.scss.erb
+++ b/app/assets/stylesheets/page2.scss.erb
@@ -124,7 +124,7 @@ padding: 20px 40px 70px 40px;
 div#postit{
   z-index:3;
   margin: -30px 0 0 10px;
-  padding:80px 65px 0 62px;
+  padding:80px 65px 0 72px;
   background: url( '<%= asset_path('post-it.png') %>' );
   background-repeat:no-repeat;
   height:260px;
@@ -148,8 +148,11 @@ div#posttext{
 /* Opera */
 -o-transform: rotate(-7deg);
 
-width: 50%;
-line-height: 150%;
+  width: 50%;
+  line-height: 150%;
+  text-align: center;
+  font-size: 1.5em;
+
 }
 
 div.leftdiv{
