CSS tweaks to post-it

--- a/app/assets/stylesheets/page2.scss.erb
+++ b/app/assets/stylesheets/page2.scss.erb
@@ -149,10 +149,10 @@ div#posttext{
 -o-transform: rotate(-7deg);
 
   width: 50%;
-  line-height: 150%;
+  line-height: 220%;
   text-align: center;
   font-size: 1.5em;
-
+  margin-top: -30px;
 }
 
 div.leftdiv{
