--- a/app/assets/stylesheets/page2.scss.erb
+++ b/app/assets/stylesheets/page2.scss.erb
@@ -90,6 +90,9 @@ a {
 }
 
 div#contentwr{
+
+background: #fff;
+
 background-image: linear-gradient(bottom, rgb(255,255,255) 74%, rgb(0,0,0) 0%, rgb(214,214,214) 21%);
 background-image: -o-linear-gradient(bottom, rgb(255,255,255) 74%, rgb(0,0,0) 0%, rgb(214,214,214) 21%);
 background-image: -moz-linear-gradient(bottom, rgb(255,255,255) 74%, rgb(0,0,0) 0%, rgb(214,214,214) 21%);
@@ -105,6 +108,7 @@ background-image: -webkit-gradient(
 	color-stop(0.21, rgb(214,214,214))
 );
 height:auto;
+
 
 
 margin-top:-40px;
