--- a/app/assets/stylesheets/header.scss.erb
+++ b/app/assets/stylesheets/header.scss.erb
@@ -34,7 +34,7 @@ div.headertext
 {
 min-width:100%;
 text-align:center;
-font:900 14px/22px "Arial", Helvetica, sans-serif;
+font: 0.9em "Arial", Helvetica, sans-serif;
 height: 100%;
 }
 
@@ -86,7 +86,7 @@ ul li.button a
 text-decoration:none;
 color: rgb(105, 28, 28);
 cursor:pointer;
-font:900 14px/22px "Arial", Helvetica, sans-serif;
+font: 700 0.9em "Arial", Helvetica, sans-serif;
 margin: 0 0 0 0;
 min-width:100%;
 text-align:center;
